--- a/component/AdminSettings/assets/css/scheme/moj-dt/sass/_colours.scss
+++ b/component/AdminSettings/assets/css/scheme/moj-dt/sass/_colours.scss
@@ -4,9 +4,9 @@ $highlight-color: #2c5d94;
 $notification-color: #d4351c;
 $button-color: #1d70b8;
 
-$menu-submenu-text: #f2f2f2;
+$menu-submenu-text: #848484;
 $menu-submenu-focus-text: #56b3e9;
-$menu-submenu-background: #2f3030;
+$menu-submenu-background: #1f1f1f;
 
 // assign default value to all undefined variables
 
